<resources>
    <string name="app_name">P&amp;D Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id_or_username_or_phone_number">Email Id</string>
    <string name="explore">Explore</string>
    <string name="requests">Requests</string>
    <string name="activity">Activity</string>
    <string name="requestPool">Request Pool</string>
    <string name="requestParcel">Request Parcel</string>
    <string name="scheduleRide">Schedule Ride</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="matching">Matching</string>
    <string name="view_requests"><![CDATA[View Requests ->]]></string>
    <string name="add_notes"><![CDATA[Add Notes ->]]></string>
    <string name="waiting_for_pick_up">Waiting for pick-up</string>
    <string name="on_the_way">On the way</string>
    <string name="track_package"><![CDATA[Track Package ->]]></string>
    <string name="finish"><![CDATA[Finish ->]]></string>
    <string name="more_details">More details</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_using_socials">Sign In using socials</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="track_me"><![CDATA[Track ME ->]]></string>
    <string name="riding">Riding</string>
    <string name="detination_reached">Detination reached</string>
    <string name="delivered">Delivered</string>
    <string name="start_ride"><![CDATA[Start Ride ->]]></string>
    <string name="view_request">View Requests</string>
    <string name="more_info">More Info</string>
    <string name="activate_car_mode">Activate Car Mode</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="carpool">CarPool</string>
    <string name="next">Next</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="request">Request</string>
    <string name="parcel">Parcel</string>
</resources>