<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestCarPool1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_med"
            android:padding="18dp"
            android:text="@string/carpool"
            android:textColor="#00B96B"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_normal"
            android:text="Step 1 of 2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="363dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:padding="16dp"
            app:cardBackgroundColor="#F5F5F5"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/ic_gps"
                        tools:ignore="VectorDrawableCompat" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/ic_swap"
                        tools:ignore="VectorDrawableCompat" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/ic_gps2"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView43"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="4dp"
                        android:text="From"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/car_pool_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPostalAddress"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView47"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="10px"
                        android:layout_marginBottom="10px"
                        android:text="To"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/car_pool_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPostalAddress"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/view17"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:background="#C3C3C3" />

        <LinearLayout
            android:id="@+id/margin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView84"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_med"
                    android:text="Date"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="#f5f5f5"
                    app:cardCornerRadius="10dp">

                    <EditText
                        android:id="@+id/car_pool_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/dd_mm_yyyy"
                        android:inputType="date" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:background="#C3C3C3" />

        <LinearLayout
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_med"
                    android:text="Time"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="#f5f5f5"
                    app:cardCornerRadius="10dp">

                    <EditText
                        android:id="@+id/car_pool_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:background="@null"
                        android:hint="@string/hh_mm_ss"
                        android:inputType="time" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:background="#C3C3C3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="0"
                android:fontFamily="@font/inter_med"
                android:text="How many are traveling?"
                android:textColor="#000000"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#f5f5f5"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/car_pool_NoOfPeople"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0"
                        android:background="@null"
                        android:ems="10"
                        android:hint="1"
                        android:inputType="numberDecimal"
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <View
            android:id="@+id/view10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:background="#C3C3C3" />

        <TextView
            android:id="@+id/textView83"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/inter_normal"
            android:text="Add note:"
            android:textColor="#000000"
            android:textSize="17dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="#f5f5f5"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/car_pool_Note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/inter_normal"
                android:gravity="start|top"
                android:hint="Add Note Here"
                android:inputType="textMultiLine"
                android:textSize="15dp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/car_pool_cancel"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_weight="0"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/inter_med"
                android:text="@string/cancel"
                app:cornerRadius="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/car_pool_next"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_weight="0"
                android:fontFamily="@font/inter_med"
                android:text="@string/next"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>